Fix code box styling on mobile

--- a/themes/parlance/source/css/_partial/highlight.styl
+++ b/themes/parlance/source/css/_partial/highlight.styl
@@ -42,6 +42,10 @@ $line-numbers
       padding: 0
   .highlight
     @extend $code-block
+    @media mq-mobile
+      margin: 0 (article-padding / 2) * -1
+      padding 10px
+
     pre
       border: none
       margin: 0
