--- a/themes/parlance/source/css/style.styl
+++ b/themes/parlance/source/css/style.styl
@@ -49,6 +49,8 @@ body
   position relative
   display flex
   flex-direction column
+  @media mq-mobile
+    overflow-x hidden
 
 #wrap
   flex 1 0 auto
